# serial-nexus

./: .gitignore  .shellcheckrc  AGENTS.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
codec-api/: Cargo.toml
codec-api/src/: lib.rs  test_support.rs
codecs/reference/: Cargo.toml
codecs/reference/src/: lib.rs
docs/: 03-design-claude-fable.md  05-design-claude-fable-v2.md  06-implementation-plan-claude-fable-v2.md  08-implementation-plan-claude-fable-v3.md  10-implementation-plan-claude-fable-v4.md  11-design-claude-fable-v5.md  12-implementation-plan-claude-fable-v5.md  13-design-claude-fable-v6.md  14-implementation-plan-claude-fable-v6.md  15-design-claude-fable-v7.md  16-implementation-plan-claude-fable-v7.md  17-design-claude-fable-v8.md  20-design-claude-fable-v9.md  21-implementation-plan-claude-fable-v9.md  24-design-claude-fable-v11.md  25-implementation-plan-claude-fable-v11.md  codec-authors.md  implementation-notes.md  macos.md  nexus-doctor.md  security.md
docs/benchmarks/: phase3.json
docs/historical/: 01-old-concepts.md  02-design-ideas.md  04-implementation-plan-claude-fable-v1.md  07-design-claude-fable-v3.md  09-design-claude-fable-v4.md  11-design-claude-fable-v5.md  16-implementation-plan-claude-fable-v7.md  18-implementation-plan-claude-fable-v8.md  19-claude-opus-code-review.md  21-implementation-plan-claude-fable-v9.md  22-design-claude-fable-v10.md  23-implementation-plan-claude-fable-v10.md
docs/rpc/: README.md  arbitration.md  configuration.md  lifecycle.md  logging.md  observation.md  serial-signals.md
docs/spikes/: phase0-findings.md
examples/external-codec/: Cargo.toml  README.md
examples/external-codec/codec/: Cargo.toml
examples/external-codec/codec/src/: lib.rs
examples/external-codec/daemon/: Cargo.toml
examples/external-codec/daemon/src/: main.rs
expectations/: linux.jq  macos.jq
fuzz/: Cargo.toml
fuzz/fuzz_targets/: envelope_decode.rs  frame_decoder.rs  reference_demux.rs  wire_hello.rs
nexus-core/: Cargo.toml
nexus-core/proptest-regressions/: data.txt
nexus-core/src/: config.rs  data.rs  graph.rs  lib.rs  lock.rs  map.rs  resolver.rs  state.rs
nexus-daemon/: Cargo.toml
nexus-daemon/src/: boundary.rs  cell.rs  control.rs  daemon.rs  lib.rs  registry.rs  runtime.rs  tap.rs
nexus-daemon/src/nodes/: codec.rs  exec.rs  leg.rs  log.rs  map.rs  mod.rs  pty.rs  serial.rs
nexus-doctor/: Cargo.toml
nexus-doctor/src/: main.rs  probes.rs  report.rs  sys.rs
nexus-itest/: Cargo.toml
nexus-itest/src/: lib.rs
nexus-itest/tests/: control_plane.rs  data_path.rs  meta_gates.rs  p0_license_gate.rs  p3_counters.rs  p3_exact_loss.rs  p3_firehose.rs  p3_log.rs  p3_log_enospc.rs  p3_subscribe.rs  p4_exclusivity.rs  p4_free_for_all.rs  p4_held.rs  p4_purge.rs  p4_send.rs  p4_steal_lease.rs  p4_waiting.rs  p5_bad_attributes.rs  p5_demux.rs  p5_envelope.rs  p5_exec_conformance.rs  p5_exec_crash.rs  p5_held.rs  p5_info.rs  p5_resync.rs  p6_binding.rs  p6_head_of_line.rs  p6_hostility.rs  p6_insecure_bind.rs  p6_outage.rs  p6_reference.rs  p7_crash_recovery.rs  p7_matrix.rs  p7_p5.rs  p7_replug.rs  p7_signals.rs  p7_squatter.rs  p7_unplug.rs  p8_agent_task.rs  p8_external_codec.rs  (+11 more)
nexus-rpc/: Cargo.toml
nexus-rpc/src/: lib.rs
nexus-sim/: Cargo.toml
nexus-sim/src/: main.rs
nexus-sys/: Cargo.toml
nexus-sys/src/: lib.rs
packaging/: 99-serial-nexus.rules  README.md  serialnexusd.example.toml  serialnexusd.service
scripts/lib/: assert.sh  fixture-tree.sh  semantic-diff.sh  wait-for.sh
scripts/validate/: all.sh
scripts/validate/hardware/: crossover-rig.sh
scripts/validate/phase0/: doctor.sh  harness-selftest.sh  jq-lint.sh  license-gate.sh  spikes.sh  unsafe-gate.sh
scripts/validate/phase1/: sim-selftest.sh  unit-tests.sh
scripts/validate/phase2/: control-plane.sh  data-path.sh
scripts/validate/phase3/: benchmark.sh  counters.sh  exact-loss.sh  firehose.sh  log-enospc.sh  log.sh  subscribe.sh
scripts/validate/phase4/: exclusivity.sh  free-for-all.sh  held.sh  purge.sh  send.sh  steal-lease.sh  waiting.sh
scripts/validate/phase5/: bad-attributes.sh  demux.sh  envelope.sh  exec-conformance.sh  exec-crash.sh  held.sh  info.sh  resync.sh
scripts/validate/phase6/: binding.sh  head-of-line.sh  hostility.sh  insecure-bind.sh  outage.sh  reference.sh
scripts/validate/phase7/: crash-recovery.sh  matrix.sh  p5.sh  replug.sh  signals.sh  squatter.sh  unplug.sh
scripts/validate/phase8/: agent-task.sh  external-codec.sh  quickstart.sh  replay-ring.sh  soak.sh  tap-drops.sh  tap.sh  web.sh
serial-nexus-builder/: Cargo.toml
serial-nexus-builder/src/: lib.rs
serialnexusctl/: Cargo.toml
serialnexusctl/src/: main.rs
serialnexusd/: Cargo.toml  clippy.toml
serialnexusd/src/: boundary.rs  control.rs  daemon.rs  main.rs  runtime.rs  sys.rs
serialnexusd/src/nodes/: codec.rs  exec.rs  leg.rs  log.rs  mod.rs  pty.rs  serial.rs
serialnexusweb/: Cargo.toml
serialnexusweb/src/: assets.rs  bridge.rs  main.rs  rpc.rs  server.rs  tls.rs  wsclient.rs
serialnexusweb/src/assets/: app.css  app.js  history.mjs  history.test.mjs  index.html  opfs.mjs
spikes/: Cargo.toml
tests/ext-codec/: half-duplex.py  lag.py  passthrough-codec.py  passthrough.py
