[package]
name = "codec-api"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Codec trait, per-channel event vocabulary, and envelope frame types for serial_nexus (§8)."

[lints]
workspace = true

# The conformance kit (§15.26 / plan §10.4): generic suites any `Codec` runs in
# its own tests. Off by default (it is test scaffolding), enabled by a consumer's
# dev-dependency `codec-api = { features = ["test-support"] }`.
[features]
test-support = []

[dependencies]
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
