[package]
name = "nexus-doctor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "serial_nexus capability checker: kernel-behavior probes + environment checks, Markdown/JSON report (design §15.17)."

[[bin]]
name = "nexus-doctor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json.workspace = true
nix = { workspace = true, features = ["term", "fs", "poll", "ioctl", "user"] }
libc.workspace = true
serial2.workspace = true
anyhow.workspace = true
