[package]
name = "nexus-itest"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform Rust integration-test harness for serial_nexus (replaces the bash validation scripts, §5)."
publish = false

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
libc.workspace = true

[dev-dependencies]
serde_json.workspace = true
