[package]
name = "nexus-itest"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform Rust integration-test harness for serial_nexus (replaces the bash validation scripts, §5)."
publish = false

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
libc.workspace = true

[dev-dependencies]
serde_json.workspace = true
# The packaging example config is structurally validated against the real graph
# validator (plan §12.2 "the example config load-verifies with the map present"),
# with no daemon and no filesystem side effects.
nexus-core = { path = "../nexus-core" }
