[package]
name = "nexus-sim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Purpose-built test double: PTY/socket doubles that emit machine-readable verdicts (§3)."
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
nix = { workspace = true, features = ["term", "fs", "poll", "ioctl"] }
libc.workspace = true
anyhow.workspace = true
sha2.workspace = true
