[package]
name = "nexus-sim"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Purpose-built test double: PTY/socket doubles that emit machine-readable verdicts (§3)."
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
nix = { workspace = true, features = ["term", "fs", "poll", "ioctl"] }
libc.workspace = true
anyhow.workspace = true
sha2.workspace = true
# The `mux`/`envelope` modes (phase 5) produce and verify reference-framed
# streams and drive external codec children through the golden-vector battery —
# both speak the shared envelope, so the double links codec-api directly (§8).
codec-api.workspace = true
bytes.workspace = true
