[package]
name = "serialnexusctl"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The serial_nexus CLI: a thin RPC client plus a rendering layer (§10, §15.16)."

[[bin]]
name = "serialnexusctl"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
nexus-rpc.workspace = true
nexus-core.workspace = true

serde_json.workspace = true
toml.workspace = true
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
nix = { workspace = true, features = ["user"] }
