[package]
name = "serialnexusd"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The serial_nexus daemon: boundary nodes, data-plane runtime, control plane, state file."

[[bin]]
name = "serialnexusd"
path = "src/main.rs"

[lints]
workspace = true

# Compiled-in codecs sit behind Cargo features so minimal builds can drop what
# they don't need (§8). The registry match in `nodes/codec.rs` gates each arm on
# its feature; an absent codec is simply an "unknown codec" at load.
[features]
default = ["codec-reference"]
codec-reference = ["dep:codec-reference"]

[dependencies]
nexus-core.workspace = true
nexus-rpc.workspace = true
codec-api.workspace = true
codec-reference = { workspace = true, optional = true }

tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "sync", "time", "signal", "process"] }
futures.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

serial2.workspace = true
nix = { workspace = true, features = ["term", "fs", "poll", "ioctl", "process", "signal", "user"] }
libc.workspace = true
